# Wecoin

./: Cargo.toml  README.md  __init__.py  setup_wecoin.sh  setup_wecoin_global.sh
src/: lib.rs  main.rs
